✨ audio(pcm): add pcm convert  添加了简单的16bit PCM数据采样i但转换功能   1. 添加页面跳转：html\uac_pcm_data_convert.html   2. 添加hex_to_int的带符号转换方法 end of segment 🔧 web(switch): add web pages switch feature  添加了页面跳转的框架   1. 添加页面跳转功能   2. 添加主页相关的内容以及欢迎页面 end of segment ✨ utools(plugin): add utools plugin support  添加了utools的插件功能   1. 添加插件配置   2. 添加插件的图标 end of segment

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid"> 
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">impressionyang的工具箱</a>
+    <a class="navbar-brand" href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/hello.html')">impressionyang的工具箱</a>
   </div>
   <div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">计划</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          Java 
+          功能 
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="#">jmeter</a></li>
-          <li><a href="#">EJB</a></li>
+          <li><a href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/uac_pcm_data_convert.html')">UAC PCM音频采样点转换</a></li>
+          <!-- <li><a href="#">EJB</a></li>
           <li><a href="#">Jasper Report</a></li>
           <li class="divider"></li>
           <li><a href="#">分离的链接</a></li>
           <li class="divider"></li>
-          <li><a href="#">另一个分离的链接</a></li>
+          <li><a href="#">另一个分离的链接</a></li> -->
         </ul>
       </li>
     </ul>
@@ -40,8 +40,16 @@
 </nav>
 
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="html/hello.html"></iframe>
+  <iframe id="pages_container" class="embed-responsive-item" src="html/hello.html"></iframe>
 </div>
 
 </body>
+
+<script>
+function switch_pages_by_file_path(file_path) {
+  var container = document.getElementById("pages_container");
+  container.src = file_path;
+}
+</script>
+
 </html>
