🔧 audio(pcm): fix convert issue  修复转换中的问题   1. 清除输出框中的回车符号   2. 转换的遍历中跳过空元素 end of segment

--- a/html/uac_pcm_data_convert.html
+++ b/html/uac_pcm_data_convert.html
@@ -48,10 +48,14 @@ function convert_usb_pcm_data() {
   // console.log(input_raw_data);
   output.value = "";
 
+  input_raw_data = input_raw_data.replace(/[\r\n]/g, "");
   var input_list = input_raw_data.split(" ");
 
   for ( var i = 0;  i < input_list.length; i ++) {
     temp_data = hex2int(input_list[i]);
+    if (input_list[i] === '') {
+      continue;
+    }
     output_data += temp_data.toString() + " ";
     if (temp_data > maxdata) {
       maxdata = temp_data;
