✨ document(hello&plan): add two desc pages  增加页面内容   1. 增加欢迎页面内容   2. 增加计划页面内容 end of segment ✨ index(layout): tuning the layout  调整页面内容   1. 添加跳转连接图标   2. 增加计划的跳转 end of segment ✨ help(modal page): add help model page  添加如何使用模态框   1. 添加模态窗口，提示如何使用该功能 end of segment

--- a/html/plan.html
+++ b/html/plan.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>hello</title>
+  <title>plan</title>
 
   <style>
     html,
@@ -561,27 +561,13 @@
 
 <body>
   <article class="markdown-body">
-    <h1>Hello World</h1>
-    <blockquote>
-      <p>该工具是我想打造的用来进行一些日常的调试工作的瑞士军刀，会把我的一些工作用的小功能集成进来</p>
-    </blockquote>
-    <h2>如何使用</h2>
+    <h1>plan</h1>
+    <br />
+    <h2>音频</h2>
     <ul>
-      <li>点击导航栏上的下拉工具</li>
-      <li>选择对应的功能即可跳转至相应的页面</li>
+      <li class="task-list-item checked"> PCM数据转换：将原始的16bit的PCM数据转换成十进制的幅度值</li>
     </ul>
-    <h2>平台</h2>
-    <blockquote>
-      <p>因为是打算使用纯JS实现功能，所以应该是全平台通用</p>
-    </blockquote>
-    <ul>
-      <li>Linux：OK</li>
-      <li>Windows：OK</li>
-      <li>MacOS：OK</li>
-    </ul>
-    
-    <hr>
-    <div style="margin-left: 40%;"><img style="width: 20%;" src="../logo.png" alt=""></div>
+    <h2>文本操作</h2>
 
   </article>
 </body>
