--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid"> 
   <div class="navbar-header">
-    <a class="navbar-brand" href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/hello.html')">impressionyang的工具箱</a>
+    <a class="navbar-brand" href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/hello.html')">
+      <span class="glyphicon glyphicon-home" aria-hidden="true"></span> impressionyang的工具箱</a>
   </div>
   <div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">计划</a></li>
+      <li class=""><a href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/plan.html')">
+        <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 计划</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          功能 
+          <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span> 音频功能 
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
