--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
           <li><a href="#">另一个分离的链接</a></li> -->
         </ul>
       </li>
+	  <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <span class="glyphicon glyphicon-list" aria-hidden="true"></span> 其他功能 
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href = "javascript:void(0);" onclick ="switch_pages_by_file_path('html/antena_distance.html')">理论无线距离计算</a></li>
+          <!-- <li><a href="#">EJB</a></li>
+          <li><a href="#">Jasper Report</a></li>
+          <li class="divider"></li>
+          <li><a href="#">分离的链接</a></li>
+          <li class="divider"></li>
+          <li><a href="#">另一个分离的链接</a></li> -->
+        </ul>
+      </li>
     </ul>
   </div>
   </div>
